k8s/apps/communications/postiz/ingress.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: postiz
  namespace: postiz
  labels:
    app.kubernetes.io/name: postiz
    app.kubernetes.io/instance: postiz
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: postiz
    app.kubernetes.io/instance: postiz
  ports:
    - name: http
      port: 5000
      targetPort: http
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postiz
  namespace: postiz
  labels:
    app.kubernetes.io/name: postiz
    app.kubernetes.io/instance: postiz
spec:
  ingressClassName: ingress-external-traefik
  rules:
    - host: postiz.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postiz
                port:
                  name: http
